src/objects/Itinerary_Solution__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Trip_Manager_Number__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Added_as_Additionally_Insured__c</fullName>
        <label>Added as Additionally Insured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Calculator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Calculator</label>
        <referenceTo>Aircraft_Calculator__c</referenceTo>
        <relationshipLabel>Itinerary Solutions</relationshipLabel>
        <relationshipName>Itinerary_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Owner_Approval_Received__c</fullName>
        <label>Aircraft Owner Approval Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Requested - Pending</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Type_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Type</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Itinerary Solutions (Aircraft Type)</relationshipLabel>
        <relationshipName>Itinerary_Solutions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <formula>TEXT(Tail_Number__r.Aircraft_Type__c)</formula>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Itinerary Solutions (Aircraft)</relationshipLabel>
        <relationshipName>Itinerary_Solutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Savings__c</fullName>
        <label>All-In Cost Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Cost__c</fullName>
        <label>All-In Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arrival_Airport_Risk__c</fullName>
        <label>Arrival Airport Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arrival Airport - May be unusable if wet conditions – Make sure to know the nearest alternative airport</fullName>
                </value>
                <value>
                    <fullName>After-hours are subject to approval</fullName>
                </value>
                <value>
                    <fullName>Often experiences ATC Delays – Make sure to know the nearest alternative airport</fullName>
                </value>
                <value>
                    <fullName>Weather Restricted – Make sure to know the nearest alternative airport</fullName>
                </value>
                <value>
                    <fullName>Vendor responsible for advising on customs hours/approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Arrival Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Itinerary Solutions (Final Destination Airport)</relationshipLabel>
        <relationshipName>Itineraries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Back_Up_Recovery_Cost_Risk__c</fullName>
        <label>Back-Up/Recovery Cost Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backup/recovery solution projected cost is 10-25% more than your original contract</fullName>
                </value>
                <value>
                    <fullName>Backup/recovery solution projected cost is 25-50% more than your original contract</fullName>
                </value>
                <value>
                    <fullName>Backup/recovery solution projected cost is 50-75% more than your original contract</fullName>
                </value>
                <value>
                    <fullName>Backup/recovery solution projected cost is 75-100% more than your original contract</fullName>
                </value>
                <value>
                    <fullName>Backup/recovery solution projected cost is 100-150% more than your original contract</fullName>
                </value>
                <value>
                    <fullName>Backup/recovery solution projected cost is 150-200% more than your original contract</fullName>
                </value>
                <value>
                    <fullName>If the aircraft has a mechanical after leg one, the recovery solution will likely be at least an additional 50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Recovery_Delay_Risk__c</fullName>
        <label>Backup/Recovery Delay Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Projected delay is 2 hours if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
                <value>
                    <fullName>Projected delay is 3 hours if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
                <value>
                    <fullName>Projected delay is 4 hours if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
                <value>
                    <fullName>Projected delay is 5 hours if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
                <value>
                    <fullName>Projected delay is 6 hours if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
                <value>
                    <fullName>Projected delay is 24 hours if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
                <value>
                    <fullName>Projected delay is 48 hours if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
                <value>
                    <fullName>Projected delay is the NEXT day if your aircraft becomes unavailable due to unexpected circumstances day-of or evening before a morning flight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booked_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booked Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Risk__c</fullName>
        <label>Booking Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solution is not confirmed until it has requested/received owner approval</fullName>
                </value>
                <value>
                    <fullName>Vendor requires a signed contract just to request owner approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Itinerary_Options1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <label>Broker Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Itineraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cabin_Type__c</fullName>
        <label>Cabin Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarTitle_Itinerary__c</fullName>
        <description>This is the title used for CalendarAnywhere.</description>
        <formula>TEXT(Trip_Start_Date__c) &amp; &quot; - &quot; &amp;
Trip_Manager_Number__r.Account.Name &amp; &quot; - &quot; &amp;
Departure_Airport__r.Name &amp; &quot;-&quot; &amp; Arrival_Airport__r.Name &amp; &quot; - &quot; &amp;
Operator__r.Name &amp; &quot; - &quot; &amp;
Calendar_Note__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Title - Itinerary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Note__c</fullName>
        <label>Calendar Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Change_Fee__c</fullName>
        <label>Cancellation/Change Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Change_Fees__c</fullName>
        <label>Cancellation/Change Fees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Departure times AND dates are considered firm and any changes are subject to vendor approval. You will be subject to the cancellation terms if you need to book another solution</fullName>
                </value>
                <value>
                    <fullName>Cancellation Terms are Not flexible within 3 business days</fullName>
                </value>
                <value>
                    <fullName>Cancellation Terms over the holidays are very inflexible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Data__c</fullName>
        <label>Cancellation Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_1__c</fullName>
        <label>Cancellation Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_2__c</fullName>
        <label>Cancellation Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_3__c</fullName>
        <label>Cancellation Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notification_Date__c</fullName>
        <label>Cancellation Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Perc_1__c</fullName>
        <label>Cancellation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Perc_2__c</fullName>
        <label>Cancellation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Perc_3__c</fullName>
        <label>Cancellation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Range_1__c</fullName>
        <label>Cancellation Range 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Range_2__c</fullName>
        <label>Cancellation Range 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Trip_Manager_Number__r.Contact.FirstName &amp; &quot; &quot; &amp;  Trip_Manager_Number__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contingency_Plan_Activated__c</fullName>
        <label>Contingency Plan Activated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contingency_Plan_Description__c</fullName>
        <label>Contingency Plan Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Recovery_Aircraft__c</fullName>
        <label>Cost of Recovery Aircraft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Crew_Duty_Risk__c</fullName>
        <label>Crew Duty Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Forecasted_Trend__c</fullName>
        <label>Current Forecasted Trend</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Booked__c</fullName>
        <inlineHelpText>Date the flight was confirmed as booked.</inlineHelpText>
        <label>Date Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Researched__c</fullName>
        <label>Date Researched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Contact__c</fullName>
        <inlineHelpText>Can be an email or phone number.</inlineHelpText>
        <label>Day of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Airport_Risk__c</fullName>
        <label>Departure Airport Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weather Restricted – Make sure to know the nearest alternative airport</fullName>
                </value>
                <value>
                    <fullName>Often experiences ATC Delays – Make sure to know the nearest alternative airport</fullName>
                </value>
                <value>
                    <fullName>May be unusable if wet conditions – Make sure to know the nearest alternative airport</fullName>
                </value>
                <value>
                    <fullName>After-hours are subject to approval</fullName>
                </value>
                <value>
                    <fullName>Vendor responsible for advising on customs hours/approval</fullName>
                </value>
                <value>
                    <fullName>Hot temperatures at an elevated airport may result in a fuel stop (weight matters)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departure_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Departure Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Itinerary Solutions (Starting Airport)</relationshipLabel>
        <relationshipName>Itineraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detailed_Cancellation_Policy__c</fullName>
        <label>Detailed Cancellation Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diff_to_Prev_Flight_on_Same_Route__c</fullName>
        <description>Cost Compared to Previous Flight on Same Route</description>
        <label>Diff. to Prev. Flight on Same Route</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Billable_Time_hours__c</fullName>
        <label>Estimated Billable Time (hours)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Operator Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Days__c</fullName>
        <label>Estimated Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Flight_Time__c</fullName>
        <label>Estimated Flight Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Flight_Time_hours__c</fullName>
        <label>Estimated Flight Time (hours)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Cost_Charter__c</fullName>
        <label>Estimated Total Cost (Charter)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Cost__c</fullName>
        <formula>Estimated_Cost__c +  Broker_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FET_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirmed that FET is included in the Estimated Cost.</inlineHelpText>
        <label>FET Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuel_Stop_Risk__c</fullName>
        <label>Fuel Stop Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft Type – Vendor says non-stop, but we think a tech-stop is possible</fullName>
                </value>
                <value>
                    <fullName>A fuel stop will add billable time and costs when compared to program trip sheet estimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Savings__c</fullName>
        <label>Hours Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Subcontracted_Operator__c</fullName>
        <label>If Subcontracted, Operator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Important_Solution_Notes__c</fullName>
        <label>Important Solution Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Cancellation_Terms__c</fullName>
        <formula>Operator__r.International_Cancellation_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>International Cancellation Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Risk_Fees__c</fullName>
        <label>International Risk or Fees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>International fees on program flights US-Europe Program flights can often be $10-15k</fullName>
                </value>
                <value>
                    <fullName>International fees on program flights Europe-Europe Program flights can often be $1-$5k</fullName>
                </value>
                <value>
                    <fullName>Restricted customs hours, permit/handling deadlines, pet restrictions, minors without both parents require a notarized form from the other parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Itinerary_Solution_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Itinerary Solution Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Itinerary_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <label>Max Seats</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiated_Description__c</fullName>
        <label>Negotiated Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Negotiated_Terms__c</fullName>
        <label>Negotiated Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft Positioning</fullName>
                </value>
                <value>
                    <fullName>Aircraft Type</fullName>
                </value>
                <value>
                    <fullName>Cancellation Terms</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Crewing</fullName>
                </value>
                <value>
                    <fullName>Payment Terms</fullName>
                </value>
                <value>
                    <fullName>Peak Day Restrictions</fullName>
                </value>
                <value>
                    <fullName>Sliding Departure</fullName>
                </value>
                <value>
                    <fullName>WiFi Cost</fullName>
                </value>
                <value>
                    <fullName>Other Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Forecasted_Trend__c</fullName>
        <label>New Forecasted Trend</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Annual_Cost_Savings__c</fullName>
        <label>Operating Annual Cost Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operating_Annual_Cost__c</fullName>
        <label>Operating Annual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operator_Confirmed_Aircraft__c</fullName>
        <label>Aircraft confirmed to use wet runway?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Confirmed_Nonstop__c</fullName>
        <label>Operator Confirmed Nonstop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Itinerary Solutions (Contact Name)</relationshipLabel>
        <relationshipName>Itinerary_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Operator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Itineraries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overnights__c</fullName>
        <formula>Trip_End_Date__c -Trip_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Overnights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>Operator__r.Payment_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_Cancellation_Terms__c</fullName>
        <formula>Operator__r.Peak_Cancellation_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peak Cancellation Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_High_Demand_Day_Risk__c</fullName>
        <label>Peak/High Demand Day Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning flights have far less issues (delays, crew duty, diversions) than flights later in the day</fullName>
                </value>
                <value>
                    <fullName>Backup/recovery solutions will be significantly longer than standard demand days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Additional_Fees_Charter__c</fullName>
        <inlineHelpText>Does not include catering and ground</inlineHelpText>
        <label>Potential Additional Fees (Charter)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Additional_Fees__c</fullName>
        <label>Potential Additional Fees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Fees ADDED to the contracted cost include additional flight time, international fees, hangar, and de-icing fees due to inclement weather, catering WIFI and flight phone charges</fullName>
                </value>
                <value>
                    <fullName>WiFi fees can be as high as $5k-$25k</fullName>
                </value>
                <value>
                    <fullName>WiFi fees can be as high as $25k-$50k</fullName>
                </value>
                <value>
                    <fullName>WiFi fees can be as high as $50k-$100k</fullName>
                </value>
                <value>
                    <fullName>De-icing fees on light cabin planes can cost an additional $2k-$5k</fullName>
                </value>
                <value>
                    <fullName>De-icing fees on mid cabin planes can cost an additional $3k-$6k</fullName>
                </value>
                <value>
                    <fullName>De-icing fees on super-mid cabin planes can cost an additional $4k-$8k</fullName>
                </value>
                <value>
                    <fullName>De-icing fees on large cabin planes can cost an additional $5k-$20k</fullName>
                </value>
                <value>
                    <fullName>Pet cleaning fees are often $500-$1,500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Itinerary Solutions</relationshipLabel>
        <relationshipName>Itinerary_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipLabel>Itinerary Solutions</relationshipLabel>
        <relationshipName>Itinerary_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualifying_Discounts__c</fullName>
        <label>Qualifying Discounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Cost__c</fullName>
        <label>Recovery Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recovery_Percentage__c</fullName>
        <label>Recovery %</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10,20,30,40,50,60,70,80,90,100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Data__c</fullName>
        <label>Risk Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_day_roundtrip__c</fullName>
        <formula>IF( AND(ISPICKVAL(Solution_Trip_Type__c , &quot;Round Trip&quot;),  Trip_End_Date__c =  Trip_Start_Date__c ), &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Day Roundtrip?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <label>Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Non-Guaranteed/Charter</fullName>
                </value>
                <value>
                    <fullName>Shuttle</fullName>
                </value>
                <value>
                    <fullName>Empty Leg</fullName>
                </value>
                <value>
                    <fullName>Aircraft Owner</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>